fix whitespace wrapping on main nav menu
closes https://app.asana.com/0/41944513475319/228314605025343

--- a/styles/_comp.ui.NavBar.less
+++ b/styles/_comp.ui.NavBar.less
@@ -72,10 +72,12 @@
 //
 // ^author
 // : Dae Clarke
+// : Chris Harvey
 // ^updated
-// : 2015-09-10
+// : 2017-02-02
 .nav1,
 .c-NavBar--main {
+  white-space: nowrap;
   a,
   .c-NavBar__Link {
     &.active, // a javascript class added on hover
